pseudocode, starter code to work from

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="highscores"></div> <!-- Link to view high scores. (Maybe this could be a button, too?) -->
+
+  <div id="timer"></div>
+
+
+  <h2 id="question"></h1>
+  <button id="answer1"></button>
+  <button id="answer2"></button>
+  <button id="answer3"></button>
+  <button id="answer4"></button>
   
+  <script src="assets/script.js"></script>
 </body>
 </html>
