--- a/index.html
+++ b/index.html
@@ -32,11 +32,34 @@
 
 
     <section id="quiz-content">
-      <h2 id="question">Example text</h2>
-      <button id="answer1">Example Answer</button>
-      <button id="answer2">Example Answer</button>
-      <button id="answer3">Example Answer</button>
-      <button id="answer4">Example Answer</button>
+      <h2 id="question"></h2>
+      <div class="button-block">
+        <button id="answer1" class="answer-btn"></button>
+        <button id="answer2" class="answer-btn"></button>
+        <button id="answer3" class="answer-btn"></button>
+        <button id="answer4" class="answer-btn"></button>
+      </div>
+      <br>
+      <br>
+      <hr>
+      <br>
+      <div id="right-wrong">
+        <p></p>
+      </div>
+    </section>
+
+    <section class="submit-score-section">
+      <form id="submit-form">
+        <label id="initials-label">Save your score!</label>
+        <input type="text" id="initials-field" placeholder="Add your initials." />
+        <button id="submit-btn">Submit</button>
+      </form>
+    </section>
+
+    <section id="leaderboard" class="leaderboard-container">
+      
+
+
     </section>
 
   </main>
