fix previous issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
 
-    <section id="quiz-content">
+    <section id="quiz-content" class="quiz-content">
       <h2 id="question"></h2>
       <div class="button-block">
         <button id="answer1" class="answer-btn"></button>
