finished scoring, working on 'submit button' eventListener

--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
       <br>
       <hr>
       <br>
-      <div id="right-wrong">
-        <p></p>
+      <div>
+        <h3 id="right-wrong"></h3>
       </div>
     </section>
 
     <section id="input-container" class="submit-score-section">
       <form id="submit-form">
-        <label id="initials-label">Save your score!</label>
-        <input type="text" id="initials-field" placeholder="Add your initials." />
+        <h3 id="your-score"></h3>
+        <label id="initials-label">Save your score:</label>
+        <input type="text" id="initials-field" maxlength="2" placeholder="Add your initials." />
         <button id="submit-btn">Submit</button>
       </form>
     </section>
