acceptance criteria minimally achieved

--- a/index.html
+++ b/index.html
@@ -62,17 +62,32 @@
     </section>
 
     <section id="leaderboard" class="leaderboard-container">
-      <h1>High Scores</h1>
-      <ul class="score-list">
-        <li id="highscore" class="score-list-item">
-          <div id="initial1" class="initials">Example Text</div>
-          <div id="score1" class="score">5</div>
-        </li>
-        <li id="highscore" class="score-list-item">
-          <div id="initial2" class="initials">Example Text</div>
-          <div id="score2" class="score">5</div>
-        </li>
-      </ul>
+      <div id="leaderboard-scores">
+        <h1>Your Score</h1>
+        <ul class="score-list" id="score-list">
+          <li id="highscore" class="score-list-item">
+            <div id="initial1" class="initials"></div>
+            <div id="score1" class="score"></div>
+          </li>
+        </ul>
+        <h2>Refresh the page to begin again!</h2>
+      </div>
+
+      <div id="no-scores">
+        <br>
+        <br>
+        <h2>
+          Uh oh...
+        </h2>
+        <br>
+        <br>
+        <h3>
+          We don't have any scores yet!
+        </h3>
+        <br>
+        <br>
+        <button id="start-btn2">Begin</button>
+      </div>
 
     </section>
 
