tweaked button visibility:

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div id="highscores-div">
-      <button id="highscores-btn">View High Scores</button>
+      <button id="highscores-btn">View Your Previous Score</button>
     </div>
 
 
