last minute tweaks

--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
         <br>
         <br>
         <h3>
-          We don't have any scores yet!
+          We don't have any scores yet.
+          <br>
+          <br>
+          Refresh the page to test your knowledge!
         </h3>
         <br>
         <br>
-        <button id="start-btn2">Begin</button>
       </div>
 
     </section>
